Thu May  2 11:32:22 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (poll_child_status): [experimental] set the cause of
	  a child's death to status if its exitcode seems to be an error.

Thu May  2 11:24:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/yaml.rb: nodoc EngineManager, add History doc #8344

Wed May  1 21:11:17 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (localtime_with_gmtoff_zone): musl libc may return NULL for
	  tm_zone.

Wed May  1 18:59:36 2013  Benoit Daloze  <eregontp@gmail.com>

	* enum.c (Enumerable#chunk): fix grammar of error message
	  for symbols beginning with an underscore [Bug #8351]

Wed May  1 16:47:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/curses/extconf.rb (curses_version): try once for each tests, a
	  function or a variable.  fallback to variable for old SVR4.

Wed May  1 16:17:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): extensions not to be installed should not
	  make static libraries, but make dynamic libraries always.

Wed May  1 12:20:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/rake/version.rb: Fix RDoc warning with  :include: [Bug #8347]

Wed May  1 11:40:25 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def (predefined): add "idProc".

	* eval.c (frame_func_id): use predefined IDs.

	* proc.c (mnew, mproc, mlambda): use predefined IDs.

	* vm.c (rb_vm_control_frame_id_and_class): ditto.

	* vm.c (Init_VM): ditto.

Tue Apr 30 23:18:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/benchmark.rb: Update Benchmark results on newer CPU

Tue Apr 30 12:31:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mproc, mlambda): use frozen core methods instead of plain
	  global methods, so that methods cannot be overridden.
	  [ruby-core:54687] [Bug #8345]

	* vm.c (Init_VM): define proc and lambda on the frozen core object.

	* include/ruby/intern.h (rb_block_lambda): add declaration instead of
	  deprecated rb_f_lambda.
